# wadashboard

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Makefile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  update.sh
.claude/: settings.json
api/v1/: auth_api.py  payments_api.py  serializers.py  urls.py  whatsapp_api.py
core/: models.py  settings.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/payments/: mayar.py
docker/: backend-entrypoint.sh
frontend/: components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/components/layout/: app-shell.tsx
frontend/src/features/auth/: api.ts  hooks.ts  state.ts  types.ts
frontend/src/features/auth/components/: auth-gate.tsx  google-button.tsx  login-card.tsx
frontend/src/lib/: api.ts
frontend/src/routes/: __root.tsx  dashboard.tsx  index.tsx  login.tsx  onboarding.tsx
templates/: dashboard.html  dashboard_base.html
templates/_partials/: icon.html
templates/registration/: login.html
templates/whatsapp/: list.html
whatsapp/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
whatsapp/management/commands/: clear_messages.py  seed_whatsapp.py
whatsapp/migrations/: 0001_initial.py  0002_member_groups.py
